--- a/index.html
+++ b/index.html
@@ -76,13 +76,13 @@
           a few which has given us a mighty posture in the industry both local
           and international, and other painting companies within the country. We
           are certified and a registered painting comapany, whose goal is to
-          uphold quality and meet the needs of our costomers until they derive
+          uphold quality and meet the needs of our customers until they derive
           maximum satisfaction, That's the goal "quality or Nothing" and it's
           manditory we uphold it.
         </p>
       </div>
       <div class="container-fluid">
-        <button class="more w-50">painters.ng</button>
+        <button class="more w-100">painters.ng</button>
       </div>
 
       <!-- <img src="" alt=""> -->
@@ -113,6 +113,7 @@
                 alt=""
               />
             </div>
+
           </div>
         </div>
         <button
@@ -168,7 +169,7 @@
                 <p>Wallpapers.</p>
               </li>
               <li>
-                <p>4Wall-Murals.</p>
+                <p>4dWall-Murals.</p>
               </li>
               
             </li>
@@ -235,7 +236,7 @@
             >
               <div class="accordion-body">
                 <strong>We give attention to inherent detailing.</strong> It is
-                hidden by default, but we then to exposes these overflow due to
+                hidden by default, but we tend to exposes these overflow due to
                 absence of inherent quality, the goal is "Quality or nothing" we
                 give attendance to quality, we uphold it, we simplify it and
                 then apply it to your homes Bringing absolute quality or
