--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <img class="main w-100" src="/assets/IMG-20230328-WA0043.jpg" alt="" />
         <h2 class="animate__animated animate__bounce">painters.ng</h2>
         <p class="intro w-100">
-          An induction into the painting falculty with one of the most,renowed
+          An induction into the painting falculty with one of the most-renowed
           painting industry in lagos,Nigeria.
         </p>
         <p class="origin w-100">
@@ -75,7 +75,7 @@
           giants,such as dulux paints, riveldi paints, Dr smart just to mention
           a few which has given us a mighty posture in the industry both local
           and international, and other painting companies within the country. We
-          are certified and a registered painting comapany, whose goal is to
+          are certified and a registered painting company, whose goal is to
           uphold quality and meet the needs of our customers until they derive
           maximum satisfaction, That's the goal "quality or Nothing" and it's
           manditory we uphold it.
@@ -171,6 +171,9 @@
               <li>
                 <p>4dWall-Murals.</p>
               </li>
+              <li>
+                <p>3d/4dwall-panels</p>
+              </li>
               
             </li>
           </ul>
@@ -211,8 +214,8 @@
                 understood the concepts of coloring, and the chemistry of
                 colors. We are the best color choosers, we give our client the
                 best color mixture. Even if these colors are not achievable from
-                paint producers, due to our concret knowledge on colouring
-                helps, you get the colors of your choice.
+                paint producers, due to our concret knowledge on colouring we will
+                help you get the colors of your choice.
               </div>
             </div>
           </div>
@@ -243,8 +246,8 @@
                 nothing. We are a top notch service that indulge in the paint
                 production and putty formulation process. we have one of the
                 best produced dampsheld putty for skimming walls, which is
-                preferrably far better than the black and pop screeding cement,
-                we produce due to our inherent knowledge in this industry.
+                preferrably far better than the black and pop screeding cement.
+                we produce dampsheld putty due to our inherent knowledge in the industry.
               </div>
             </div>
           </div>
@@ -268,7 +271,7 @@
             >
               <div class="accordion-body">
                 <strong
-                  >we are encrypted and update with the new technologies.
+                  >we are encrypted and updated with the new technologies.
                 </strong>
                 We are master of our craft, we are discharged and acquainted to
                 the use of modern machines which aides the jobs easily and
@@ -293,7 +296,7 @@
           <div>
             <img src="/icon-email.svg" class="email-icon" alt="" />
           </div>
-          <p class="mailsss mx-2">olumidebeni678@gmail.com</p>
+          <p class="mailsss mx-2">painters.ng01@gmail.com</p>
         </div>
 
         <div class="locationss d-flex  ">
